--- a/geometry/Base.lproj/Main.storyboard
+++ b/geometry/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,12 +17,27 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="tView" customModule="geometry" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1iP-ch-yIL">
+                                <rect key="frame" x="20" y="20" width="62" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Load"/>
+                                <connections>
+                                    <action selector="loadTriangle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R34-dm-dlv"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1iP-ch-yIL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fZy-hZ-27u"/>
+                            <constraint firstItem="1iP-ch-yIL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iVH-08-ER5"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="357"/>
         </scene>
     </scenes>
 </document>
