--- a/geometry/Base.lproj/Main.storyboard
+++ b/geometry/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ANO-aC-eJc">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,27 +17,154 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="TrianglesView" customModule="geometry" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1iP-ch-yIL">
-                                <rect key="frame" x="20" y="20" width="62" height="30"/>
-                                <animations/>
-                                <state key="normal" title="Load"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="daA-fc-wVC">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="vkl-Zu-pQj">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="T7h-MZ-T5K">
+                                <rect key="frame" x="20" y="7" width="133" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Settings"/>
                                 <connections>
-                                    <action selector="loadTriangles:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vco-6U-iPI"/>
+                                    <action selector="settingbutton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TFx-fe-ZMT"/>
+                                    <segue destination="ZsB-Ja-x3A" kind="modal" identifier="settingEdit" modalTransitionStyle="coverVertical" id="RTr-oz-DJ8"/>
                                 </connections>
                             </button>
-                        </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="1iP-ch-yIL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fZy-hZ-27u"/>
-                            <constraint firstItem="1iP-ch-yIL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iVH-08-ER5"/>
-                        </constraints>
-                    </view>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="b8v-ii-Qp2">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fRC-SF-ktM">
+                                <rect key="frame" x="518" y="7" width="62" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Load"/>
+                                <connections>
+                                    <action selector="loadTriangles:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ajj-S0-PoG"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1117" y="357"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="VgL-9g-33h">
+            <objects>
+                <viewController id="Bz7-Jy-WoL" customClass="SettingsViewController" customModule="geometry" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oKB-4k-pvo"/>
+                        <viewControllerLayoutGuide type="bottom" id="9BM-xr-lPK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ppq-w9-oOU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="0e1-0y-kR8">
+                                <rect key="frame" x="126" y="80" width="456" height="31"/>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="E7g-IQ-W57">
+                                <rect key="frame" x="126" y="118" width="456" height="31"/>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Blue" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ram-oO-hZe">
+                                <rect key="frame" x="20" y="155" width="75" height="31"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Green" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bie-6V-pS5">
+                                <rect key="frame" x="20" y="117" width="75" height="31"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Red" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnv-dJ-nkF">
+                                <rect key="frame" x="20" y="79" width="75" height="31"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Z6k-Rq-Aos">
+                                <rect key="frame" x="126" y="156" width="456" height="31"/>
+                            </slider>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="Ram-oO-hZe" secondAttribute="leading" id="53l-zz-P9g"/>
+                            <constraint firstItem="Z6k-Rq-Aos" firstAttribute="top" secondItem="E7g-IQ-W57" secondAttribute="bottom" constant="8" id="Bjc-G5-pmx"/>
+                            <constraint firstItem="Ram-oO-hZe" firstAttribute="baseline" secondItem="Z6k-Rq-Aos" secondAttribute="baseline" id="FW9-TS-54G"/>
+                            <constraint firstItem="9BM-xr-lPK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Z6k-Rq-Aos" secondAttribute="bottom" constant="8" symbolic="YES" id="KE2-MI-w29"/>
+                            <constraint firstItem="Bie-6V-pS5" firstAttribute="top" secondItem="Lnv-dJ-nkF" secondAttribute="bottom" constant="7" id="KMx-wk-WpM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="E7g-IQ-W57" secondAttribute="trailing" id="QoC-cU-lCu"/>
+                            <constraint firstItem="Bie-6V-pS5" firstAttribute="baseline" secondItem="E7g-IQ-W57" secondAttribute="baseline" id="Sqc-b2-hrQ"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Bie-6V-pS5" secondAttribute="leading" id="TKi-Zi-zLS"/>
+                            <constraint firstItem="Z6k-Rq-Aos" firstAttribute="leading" secondItem="Ram-oO-hZe" secondAttribute="trailing" constant="33" id="Xd7-e4-Ivc"/>
+                            <constraint firstItem="0e1-0y-kR8" firstAttribute="leading" secondItem="Lnv-dJ-nkF" secondAttribute="trailing" constant="33" id="aQo-cY-txo"/>
+                            <constraint firstItem="Lnv-dJ-nkF" firstAttribute="baseline" secondItem="0e1-0y-kR8" secondAttribute="baseline" id="cv1-Tc-C5a"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Z6k-Rq-Aos" secondAttribute="trailing" id="f6m-A9-myO"/>
+                            <constraint firstItem="0e1-0y-kR8" firstAttribute="top" secondItem="oKB-4k-pvo" secondAttribute="bottom" constant="16" id="f8f-z3-m1B"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0e1-0y-kR8" secondAttribute="trailing" id="hGi-gr-Xmq"/>
+                            <constraint firstItem="Lnv-dJ-nkF" firstAttribute="top" secondItem="oKB-4k-pvo" secondAttribute="bottom" constant="15" id="n93-wK-mgy"/>
+                            <constraint firstItem="E7g-IQ-W57" firstAttribute="leading" secondItem="Bie-6V-pS5" secondAttribute="trailing" constant="33" id="nKm-Aw-7oI"/>
+                            <constraint firstItem="Ram-oO-hZe" firstAttribute="top" secondItem="Bie-6V-pS5" secondAttribute="bottom" constant="7" id="rJa-rJ-xse"/>
+                            <constraint firstItem="0e1-0y-kR8" firstAttribute="leading" secondItem="Lnv-dJ-nkF" secondAttribute="trailing" constant="33" id="xhr-QR-AbG"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Lnv-dJ-nkF" secondAttribute="leading" id="xp9-ba-vGR"/>
+                            <constraint firstItem="E7g-IQ-W57" firstAttribute="top" secondItem="0e1-0y-kR8" secondAttribute="bottom" constant="8" id="zhq-fb-DW3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="zFW-gm-stw">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="XqE-XM-iCh">
+                            <connections>
+                                <action selector="doneButton:" destination="Bz7-Jy-WoL" id="Ezi-Fz-H1V"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bluecolor" destination="Z6k-Rq-Aos" id="r8h-NO-U8t"/>
+                        <outlet property="greencolor" destination="E7g-IQ-W57" id="jsS-Ed-l6U"/>
+                        <outlet property="redcolor" destination="0e1-0y-kR8" id="a8w-Ne-egd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gSJ-ce-crA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2503" y="357"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="M7G-C6-rxr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ANO-aC-eJc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TKr-fT-H40">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="8Uj-ea-GcU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J95-g4-Fay" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="305" y="357"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sn7-3r-6ZM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZsB-Ja-x3A" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3aO-eE-YPD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Bz7-Jy-WoL" kind="relationship" relationship="rootViewController" id="TDr-4h-3Ll"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8TJ-22-0ht" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1809" y="357"/>
         </scene>
     </scenes>
 </document>
