--- a/geometry/Base.lproj/Main.storyboard
+++ b/geometry/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                     <navigationItem key="navigationItem" id="zFW-gm-stw">
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="XqE-XM-iCh">
                             <connections>
-                                <action selector="doneButton:" destination="Bz7-Jy-WoL" id="Ezi-Fz-H1V"/>
+                                <segue destination="O5f-Tt-l3J" kind="unwind" identifier="doneUnwind1" unwindAction="doneUnwindAction:" id="9j1-fd-6hb"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -127,6 +127,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gSJ-ce-crA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="O5f-Tt-l3J" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2503" y="357"/>
         </scene>
