--- a/geometry/Base.lproj/Main.storyboard
+++ b/geometry/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ANO-aC-eJc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ANO-aC-eJc">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -28,7 +28,7 @@
                                 <state key="normal" title="Settings"/>
                                 <connections>
                                     <action selector="settingbutton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TFx-fe-ZMT"/>
-                                    <segue destination="ZsB-Ja-x3A" kind="modal" identifier="settingEdit" modalTransitionStyle="coverVertical" id="RTr-oz-DJ8"/>
+                                    <segue destination="ZsB-Ja-x3A" kind="modal" identifier="editSetting" modalTransitionStyle="coverVertical" id="RTr-oz-DJ8"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -44,6 +44,9 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="trianglesView" destination="8bC-Xf-vdC" id="H9D-lp-UsT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
